--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/ico" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>qReport报表</title>
+  <title>vision-report报表</title>
+  <link rel="stylesheet" href="/static/js/xspreadsheet.css">
+  <script src="/static/js/xspreadsheet.js"></script>
+  <script src="/static/js/locale/zh-cn.js"></script>
 </head>
 
 <body>
